Update spacing. Fix tweet separator

--- a/twitter.user.styl
+++ b/twitter.user.styl
@@ -150,6 +150,9 @@
   // Tweet click
   .r-1nvv5a4 { bg: $highlight }
 
+  // Tweet separator
+  .r-1adg3ll .r-aaos50 { bg: $alt }
+
   // Separator after new tweet
   .r-vz2u4x { bg: $alt }
 
